# drone-race

./: .gitignore  app.py  pyproject.toml
assets/: scene.xml.j2
env/: env.py  load_scene.py
policy/: train.py  train_notebook.ipynb
