[project]
name = "drone-race"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
dependencies = [
    "jax[cpu]",
    "mujoco",
    "playground",
    "jinja2",
    "brax"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
